<resources>
    <string name="app_name">Questionnaire</string>
    <string name="qstn_one">Please select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unspecified">Unspecified</string>
    <string name="qstn_two">Which color(s) would you choose?</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="other">Other</string>
    <string name="one_or_more_of_these">One or more of these</string>
</resources>
