<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidpractice.abha.questionnaire.QstnOneActivity">

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/toolbarQstnOne"-->
        <!--android:background="@color/colorPrimary"/>-->

    <include
        android:id="@+id/toolbarQstnOne"
        layout="@layout/app_bar"/>

    <TextView
        android:id="@+id/tvQstnOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbarQstnOne"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/qstn_one" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvQstnOne"
        android:layout_below="@+id/tvQstnOne"
        android:layout_marginTop="21dp"
        android:id="@+id/rgGender">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rbUnspecified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unspecified" />

    </RadioGroup>



</RelativeLayout>
