<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidpractice.abha.questionnaire.QstnTwoActivity">

    <include
        android:id="@+id/toolbarQstnTwo"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/tvQstnTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbarQstnTwo"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/qstn_two" />

    <!--<ListView-->
        <!--android:id="@+id/lvAnsTwoOptions"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignStart="@+id/tvQstnTwo"-->
        <!--android:layout_below="@+id/tvQstnTwo"-->
        <!--android:layout_marginTop="25dp" />-->

    <!--<View-->
        <!--android:layout_below="@id/lvAnsTwoOptions"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@android:color/darker_gray"/>-->

    <RadioGroup
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rgColor"
        android:layout_below="@+id/tvQstnTwo"
        android:layout_alignStart="@+id/tvQstnTwo">

        <RadioButton
            android:id="@+id/rbOneOrMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_or_more_of_these" />

        <ListView
            android:id="@+id/lvAnsTwoOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp" />

        <RadioButton
            android:id="@+id/rbNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none_of_the_above" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other" />

    </RadioGroup>

    <Button
        android:id="@+id/btnShowAnsTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Display Answer"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/rgColor"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
